--- a/01_Elementary_Operations.ipynb
+++ b/01_Elementary_Operations.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ratna3784/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -57,15 +57,65 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "dm1hT_B9jXGu"
+        "id": "wCh4_w4I5KOr"
       },
       "source": [
-        "3 + 2         # addition"
+        "my test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MlNWWOgI5EhZ",
+        "outputId": "9721f540-5f6d-47f0-e933-8597f1d04908",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "23-12"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dm1hT_B9jXGu",
+        "outputId": "2358e0ee-7683-4005-cf51-e878cd4e52af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "3.5 + 2         # addition"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -92,79 +142,183 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TwvpedNVXzRc"
+        "id": "TwvpedNVXzRc",
+        "outputId": "e8ac873e-bb07-4d03-c0fd-0a7e30fe701e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
       "source": [
         "7 / 2         # division (always returns a float)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-0dd47c7fa199>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    (int)7 / 2         # division (always returns a float)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2LQZZcRPX5Bt"
+        "id": "2LQZZcRPX5Bt",
+        "outputId": "3340ef6d-0816-48c8-99b4-aa17e29069d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type (7 / 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qjJkqqXcX95p"
+        "id": "qjJkqqXcX95p",
+        "outputId": "1f0bc7c3-3d94-40c6-caea-cb1a367dd162",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 // 2        # floor division (returns an integer - discards decimal part)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2L_ku8CLYKDC"
+        "id": "2L_ku8CLYKDC",
+        "outputId": "21d69b63-8c86-4885-8680-ca1ea713aedc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type ( 7 // 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dH2NmrgNYM97"
+        "id": "dH2NmrgNYM97",
+        "outputId": "34ea8fa5-9966-4d93-fd42-fa1123353ce7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 % 2         # modulus operator - remainder is fetched after division"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wNTJter-YZ7W"
+        "id": "wNTJter-YZ7W",
+        "outputId": "b22ed771-01e0-42a4-fb76-fc3db4c98b67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 ** 2        # exponentiation "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "asikDVm7YvYT"
+        "id": "asikDVm7YvYT",
+        "outputId": "2ac676df-3ae2-4b9a-bbcc-621e6a2fabf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 - 2 * 2     # operator precedence : (), **, -(unary),  * or /, + or -"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -176,52 +330,139 @@
         "first_name = 'charlie'\n",
         "second_name = \"chaplin\""
       ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FGsk4ZKD5wEc"
+      },
+      "source": [
+        ""
+      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oYu_ynPOeS2_"
+        "id": "oYu_ynPOeS2_",
+        "outputId": "d757b145-fecf-45ea-be55-010d1e88ea8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliechaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oIY8q8wgehFC"
+        "id": "oIY8q8wgehFC",
+        "outputId": "48729748-68f7-4fb8-ee53-b9f06c970a06",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + ' ' + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charlie chaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Vuv8iMbevRJ"
+        "id": "6Vuv8iMbevRJ",
+        "outputId": "68291e13-29e7-470c-97f0-ccb6f184b3ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name * 2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QPblckrXe2ui"
+        "id": "QPblckrXe2ui",
+        "outputId": "666d8c62-e637-44f3-f212-f2af5fc413f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "(first_name * 2) + ' ' + (second_name * 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie chaplinchaplinchaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,20 +484,32 @@
         "brick_breadth = 4\n",
         "brick_height = 2"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pKZ7uDHCZ3At"
+        "id": "pKZ7uDHCZ3At",
+        "outputId": "42e1433a-1753-4c7d-fc92-f2c066d0b9af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "brick_volume = brick_length * brick_breadth * brick_height\n",
         "print (brick_volume)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -266,8 +519,34 @@
       "source": [
         "# 2. What will the expression -3 ** 2 evaluate to ?\n"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2orJmoDK6QUl",
+        "outputId": "24af20de-a87a-4f73-95cf-e9a954ff9fed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "(-3)**2"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -281,13 +560,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fZ4Tpi0B27lf"
+        "id": "4KH_Xfu_84fV"
       },
       "source": [
-        ""
+        "fuel_cost = 102\n",
+        "Milage = 38\n",
+        "Amount = 50"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5EiAHeQn9Dc9",
+        "outputId": "79506d14-eef3-4917-f816-becef4f26efc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "distance = Milage / fuel_cost * Amount\n",
+        "print(\"distance can be travelled for\" ,  Amount , \"is\", round(distance,2))"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "distance can be travelled for 50 is 18.63\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fZ4Tpi0B27lf",
+        "outputId": "0713667b-e2b5-4cc5-a9f1-01012901d134",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "38/102 *50"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "18.627450980392158"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
     },
     {
       "cell_type": "markdown",
